# NeuroNews

./: .coveragerc  .dockerignore  .env.example  .env.postgres  .env.vector.example  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  .mcp.json  .spectral.yml  .trivyignore  =1.0.2  AI_SUMMARIZATION_FINAL_REPORT.md  ALL_PROBLEMS_FIXED_REPORT.md  API_KEY_MANAGEMENT_COMPLETE.md  APP_PY_COVERAGE_ACHIEVEMENT_REPORT.md  ASYNC_IMPLEMENTATION_SUMMARY.md  AWS_DEPLOYMENT_GUIDE.md  AWS_RATE_LIMITING_COVERAGE_IMPROVEMENT.md  CI_CD_SOLUTION_SUMMARY.md  CI_CD_TEST_FIXES_FINAL_REPORT.md  CI_CD_TEST_FIXES_PROGRESS_REPORT.md  CLUSTER_EVENT_DETECTION_PLAN.md  COMPREHENSIVE_COVERAGE_REPORT.md  CONTAINERIZATION_COMPLETE.md  COVERAGE_INITIATIVE_README.md  COVERAGE_README.md  DATABASE_COVERAGE_ACHIEVEMENT_SUMMARY.md  DATABASE_COVERAGE_SUMMARY.md  DATABASE_MODULARIZATION_COMPLETE.md  DATABASE_TEST_CLEANUP_SUMMARY.md  DATA_VALIDATION_IMPLEMENTATION.md  Dockerfile  Dockerfile.simple  FINAL_COVERAGE_ACHIEVEMENT_REPORT.md  FLAKE8_CLEANUP_COMPLETE_SUMMARY.md  FOLDER_STRUCTURE.md  GITHUB_ACTIONS_ERROR_RESOLUTION.md  GO_SCRAPER_SUMMARY.md  ISSUE_26_OPTIMIZATION_SUMMARY.md  (+203 more)
.github/: TROUBLESHOOTING.md  pull_request_template.md
ansible/: deploy-neuronews.yml  deploy-nginx-proxy.yml  deploy-nginx-ssl.yml  smoke-tests.yml  test-deployment.yml
config/: domain_packs.json  keyword_topic_settings.json  knowledge_graph_population_settings.json  ner_settings.json  pytest.ini  settings.json  validation_settings.json
configs/: chunking.yaml  indexer.yaml
connectors/: README.md  postgres-articles.json
contracts/: README.md  policies.md
data/: coverage.xml  dev.db  event_detection_demo_results.json  flake8_errors.txt  issue_36_validation_results.json  nlp_jobs_validation_20250818_192715.json  nlp_optimization_results.json  sample.json  waf_security_test_report.json
dbt/: .user.yml  README.md  dbt_project.yml  dev.db  packages.yml  profiles.yml  requirements.txt
demo/: demo_ai_summarization.py  demo_airflow_bootstrap.py  demo_airflow_marquez_env_config.py  demo_api_key_management.py  demo_async_scraper.py  demo_custom_airflow_openlineage.py  demo_data_validation.py  demo_ddos_protection_complete.sh  demo_dynamodb_metadata.py  demo_event_detection.py  demo_fake_news_detection.py  demo_influence_analysis.py  demo_keyword_topic_extraction.py  demo_knowledge_graph_population.py  demo_lineage_naming.py  demo_monitoring.py  demo_multi_language.py  demo_ner.py  demo_news_pipeline_dag.py  demo_nginx_monitoring_complete.sh  demo_redshift_etl.py  demo_s3_integration.py  demo_s3_simple.py  demo_s3_storage.py  demo_sentiment_pipeline.py  demo_sentiment_pipeline_corrupted.py  demo_snowflake_etl.py  demo_snowflake_schema.py  demo_timezone_sla_config.py
docker/: fastapi.Dockerfile
docs/: BDU_MILESTONE3_ISSUES.md  COVERAGE_SUB_ISSUES.md  DASHBOARD_DEPLOYMENT.md  EXACTLY_ONCE_DESIGN.md  GITHUB_COVERAGE_ISSUES.md  KNOWLEDGE_GRAPH_TESTING_COMPLETE_485.md  MIGRATION_REPORT.md  PROJECT_STRUCTURE.md  REDSHIFT_REMOVAL_DOCUMENTATION.md  SNOWFLAKE_ANALYTICS_INTEGRATION.md  SNOWFLAKE_ETL_IMPLEMENTATION.md  SNOWFLAKE_MIGRATION_GUIDE.md  STRUCTURE_RECOMMENDATIONS.md  TEST_COVERAGE_MILESTONE_COMPLETE.md  benchmark_results.json  dbt_quickstart.md  dbt_snowflake_parity.md  error_handling_test_report.json  genui.md  incremental_strategy.md  index.md  lineage_naming.md  model_benchmarks.md  security.md  streaming-backfill.md
evals/: qa_dev.jsonl  qa_papers.jsonl  run_eval.py  run_eval_enhanced.py  (+1 more)
services/metrics-api/: docker-compose.yml  pyproject.toml  requirements.txt
services/metrics-api/metrics-api/: README.md  test_api.py
(+2485 files in other folders)
