[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[project]
name = "neuronews"
version = "0.1.0"
description = "A news aggregation and analysis system"
requires-python = ">=3.13"
dependencies = [
    "websockets>=12.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"