[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[project]
name = "neuronews"
version = "0.1.0"
description = "A news aggregation and analysis system"
requires-python = ">=3.8"
dependencies = [
    "gremlinpython>=3.6.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"