[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."] # Add project root to sys.path for pytest

[project]
name = "neuronews"
version = "0.1.0"
description = "A news aggregation and analysis system"
requires-python = ">=3.8"
dependencies = [
    "gremlinpython>=3.6.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "boto3>=1.26.0",
    "tenacity>=8.2.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.20.0",
    "pydantic>=1.10.0",
    "psycopg2-binary>=2.9.9",  # Added psycopg2-binary
    "bcrypt>=4.0.0",
    "email-validator>=2.1.0",
    "pytest-mock>=3.10.0",
    "httpx>=0.24.0",
    "moto>=4.2.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false
